# Fight_Game_Demo

./: CMakeLists.txt  main.cpp
Equipment/Weapons/: Weapon.cpp  Weapon.h
Equipment/Weapons/Bows/: Bow.cpp  Bow.h  PlasticBow.cpp  PlasticBow.h
Equipment/Weapons/Swords/: DragonSword.cpp  DragonSword.h  Sword.cpp  Sword.h  WoodenSword.cpp  WoodenSword.h
Exceptions/: IncorrectNameException.cpp  IncorrectNameException.h
Factories/: WeaponFactory.cpp  WeaponFactory.h
Factories/Weapon/: BowFactory.cpp  BowFactory.h  SwordFactory.cpp  SwordFactory.h  WeaponFactory.cpp  WeaponFactory.h
Heroes/: Archer.cpp  Archer.h  Hero.cpp  Hero.h  Knight.cpp  Knight.h
